Create new menu links to sign up form and login form

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <a href="#">About me</a>
         <a class="blog" href="#">Tech blog</a>
         <a class="contact" href="#">Contact me</a>
-        <a class="login" href="#">Login</a>
+        <a class="login" href="login_form.html">Login</a>
+        <a class="signup" href="signup_form.html">Sign up</a>
       </nav>
     </header>
     <main id="main">
