--- a/login_form.html
+++ b/login_form.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/login.css">
     <title>Login page</title>
 </head>
 <body>
-    <form action="#" method="post">
+    <form id="login_form" action="#" method="post">
         <h2>Login</h2>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
-        <input type="submit" value="Login">
+        <input type="submit" value="Log in" id="login_btn">
     </form>
 </body>
 </html>
