--- a/login_form.html
+++ b/login_form.html
@@ -10,9 +10,9 @@
     <form id="login_form" action="#" method="post">
         <h2>Login</h2>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
+        <input type="text" id="username" name="username" required>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
+        <input type="password" id="password" name="password" required>
         <input type="submit" value="Log in" id="login_btn">
     </form>
 </body>
