--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           fetchpriority="low"
           loading="lazy"
         />
-        <a href="#">About me</a>
-        <a class="blog" href="#">Tech blog</a>
+        <a href="index.html">About me</a>
+        <a class="blog" href="techblog.html">Tech blog</a>
         <a class="contact" href="#">Contact me</a>
         <a class="login" href="login_form.html">Login</a>
         <a class="signup" href="signup_form.html">Sign up</a>
