--- a/signup_form.html
+++ b/signup_form.html
@@ -7,22 +7,29 @@
     <title>Sign up </title>
 </head>
 <body>
-    <form action="#" method="post">
+    <form id="signup_form" action="#" method="post">
         <h2>Sign Up</h2>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" placeholder="Create your username" required>
+        <input type="text" id="username" name="username" placeholder="Create your username" aria-describedby="username-error" required>
+        <div id="username-error" class="error" aria-live="polite" ></div> 
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="example@test.org" required>
+        <input type="email" id="email" name="email" placeholder="example@test.org" aria-describedby="email-error" required>
+        <div id="email-error" class="error" aria-live="polite" ></div> 
+
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" aria-describedby="password-error" required>
+        <div id="password-error" class="error" aria-live="polite" ></div> 
+
 
         <label for="password_repeat">Repeat password:</label>
-        <input type="password" id="password_repeat" name="password_repeat" required>
+        <input type="password" id="password_repeat" name="password_repeat" aria-describedby="password_repeat-error" required>
+        <div id="password_repeat-error" class="error" aria-live="polite" ></div> 
+
 
         <label for="birthdate">Birthdate:</label>
-        <input class="input-base" type="date" id="birthdate" name="birthdate" required>
+        <input class="input-base" type="date" id="birthdate" name="birthdate" >
 
         <label for="age">Age:</label>
         <input class="input-base" type="number" id="age" name="age" min="0" max="120">
@@ -61,6 +68,6 @@
         <input type="reset" value="Reset">
         <input type="submit" value="Sign Up">
     </form>
-    
+    <script src="scripts/script.js"></script>
 </body>
 </html>
