--- a/techblog.html
+++ b/techblog.html
@@ -40,8 +40,8 @@
     <div class="toolbar" id="toolbar">
     <button class="btn" id="btnAll" aria-pressed="true">Усі</button>
     <span style="margin-left:auto"></span>
-    <input id="searchTitle" class="input" type="search" placeholder="Знайти за назвою…" aria-label="Пошук статті за назвою">
-    <button class="btn" id="searchBtn">Знайти</button>
+    <input id="searchTitle" class="input" type="search" placeholder="Find for title..." aria-label="Пошук статті за назвою">
+    <button class="btn" id="searchBtn">Find</button>
 
   </div>
 
