Fixed  inscriptions language in create post section

--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@
 
         <form id="postForm" novalidate>
           <div class="form-group">
-            <label for="postTitle">Заголовок поста</label>
+            <label for="postTitle">Post title</label>
             <input
               type="text"
               id="postTitle"
               name="title"
               required
               minlength="3"
-              placeholder="Введіть заголовок"
+              placeholder="Enter title"
             />
           </div>
 
           <div class="form-group">
-            <label for="postBody">Текст поста</label>
+            <label for="postBody">Post text</label>
             <textarea
               id="postBody"
               name="body"
               rows="5"
               required
-              placeholder="Напишіть текст поста"
+              placeholder="Write text for the post"
             ></textarea>
           </div>
 
